# rtspServiceByLive555v2018

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/BasicUsageEnvironment/include/: DelayQueue.hh
app/src/main/cpp/UsageEnvironment/include/: UsageEnvironment.hh
app/src/main/cpp/groupsock/: GroupsockHelper.cpp
app/src/main/cpp/liveMedia/include/: Media.hh  RTPInterface.hh
app/src/main/java/com/brigittta/live555/rtspService/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
